--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 <div class="header">
-<h1>Overview</h1>
+    <h1>Overview</h1>
     <a href="/favs">Favourites</a>
     <a href="/last">Last study</a>
+    <a href="/tagged">Search by tags</a>
+    <a href="/tags">Tags</a>
 </div>
 <div class="tiles-container">
 {% for img in images %}
