--- a/templates/tpl_tags_list.html
+++ b/templates/tpl_tags_list.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/styles_global.css">
     <title>Tags list</title>
 </head>
 <body>
-<h1>Tags</h1>
+<div class="header">
+    <a class="back-btn" href="/">&lt;</a><h1>{{ title }}</h1>
+    <h1>Tags</h1>
+</div>
+
 <a href="/tags/add">Add Tag</a>
 <table>
     <tr>
