--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Image ({{ image.image_id }})</title>
+    <link rel="stylesheet" href="/static/styles_global.css">
     <link rel="stylesheet" href="/static/style_image.css">
     <script type="text/javascript" src="/static/img_params.js"></script>
     <script type="text/javascript" src="/static/rating.js"></script>
