--- a/templates/tpl_tags_edit.html
+++ b/templates/tpl_tags_edit.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/styles_global.css">
     <title>Tag edit</title>
 </head>
 <body>
