--- a/static/styles_global.css
+++ b/static/styles_global.css
@@ -3,6 +3,12 @@ body
     background-color: #7a7676;
 }
 
+button
+{
+    border-radius: 3%;
+    border: 2px;
+}
+
 .header
 {
     display: flex;
@@ -20,8 +26,29 @@ body
     margin-right: 20px;
 }
 
-.back-btn, .back-btn:active, .back-btn:hover, .back-btn:visited, .back-btn:focus
+.back-btn
 {
     color: #545151;
+}
+
+.no-decor, .no-decor:active, .no-decor:hover, .no-decor:visited, .no-decor:focus
+{
+    color: inherit;
     text-decoration: none;
+}
+
+/* Use instead of style="display: hidden" */
+.vis-hide
+{
+    display: none;
+}
+
+/* Button semi transparent */
+.btn-bg-blend {
+    opacity: 0.5;
+    transition: opacity 0.2s;
+}
+
+.btn-bg-blend:hover {
+    opacity: 1;
 }
