some visual improvement to html layout. transparent buttons everywhere!

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <head>
     <title>Gallery overview</title>
     <link rel="stylesheet" href="/static/styles_overview.css">
