--- a/templates/tpl_tags_add.html
+++ b/templates/tpl_tags_add.html
@@ -6,7 +6,10 @@
     <title>Tag add</title>
 </head>
 <body>
-<h1>Add Tag</h1>
+<div class="header">
+    <a class="back-btn no-decor btn-bg-blend" href="/tags">&lt;</a>
+    <h1>Add Tag</h1>
+</div>
 <form method="POST" action="/tags/add">
     <label for="tag">Tag:</label>
     <input type="text" id="tag" name="tag" required>
