--- a/templates/tpl_tags_edit.html
+++ b/templates/tpl_tags_edit.html
@@ -6,6 +6,10 @@
     <title>Tag edit</title>
 </head>
 <body>
+<div class="header">
+    <a class="back-btn no-decor btn-bg-blend" href="/tags">&lt;</a>
+    <h1>Edit tag</h1>
+</div>
 <form method="POST" action="/tags/edit/{{ tag.id }}">
     <label for="tag">Tag:</label>
     <input type="text" id="tag" name="tag" value="{{ tag.tag }}" required>
