--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -143,8 +143,8 @@
                     });
             });
 
-            const rateImage = new RateSingle({{ image.image_id }}, 'image-rating', 'rate-up', 'rate-dn')
-            const rateFolder = new RateFolder({{ image.image_id }}, 'rate-fld', 'rate-up-f', 'rate-dn-f')
+            const rateImage = new RateSingle({{ image.image_id }}, 'image-rating', 'rate-up', 'rate-dn', 'loading')
+            const rateFolder = new RateFolder({{ image.image_id }}, 'image-rating', 'rate-up-f', 'rate-dn-f', 'loading')
 
             // study timer
             const timer = new StudyTimer({{ timer }}, 'time-current', 'time-planned')
