--- a/static/styles_global.css
+++ b/static/styles_global.css
@@ -69,7 +69,7 @@ button
 /* Animations */
 
 /* Loading */
-@keyframes rotateLoad {
+@keyframes animLoading {
     from {
         transform: rotate(0deg);
     }
@@ -79,5 +79,49 @@ button
 }
 
 .loading {
-    animation: rotateLoad 2s linear infinite;
+    animation: animLoading 2s linear infinite;
+}
+
+/* Operation Success */
+@keyframes animSucc {
+    0% {
+        border: 1px solid rgba(35, 243, 21, 0.0);
+        background-color: rgba(35, 243, 21, 0.0);
+    }
+    10%
+    {
+        border: 1px solid rgba(35, 243, 21, 1);
+        background-color: rgba(35, 243, 21, 1);
+    }
+    100%
+    {
+        border: inherit;
+        background-color: inherit;
+    }
+}
+
+.op-success {
+    animation: animSucc 1s ease-out;
+}
+
+/* Operation Fail */
+@keyframes animFail {
+    0% {
+        border: 1px solid rgb(243, 21, 73, 0.0);
+        background-color: rgb(243, 21, 73, 0.0);
+    }
+    10%
+    {
+        border: 1px solid rgb(243, 21, 73, 1);
+        background-color: rgb(243, 21, 73, 1);
+    }
+    100%
+    {
+        border: inherit;
+        background-color: inherit;
+    }
+}
+
+.op-fail {
+    animation: animFail 1s ease-out;
 }
