added class to encapsulate default web request parameters. Added default limit to env config. Added paging to /favs and /last

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -7,9 +7,9 @@
 <body>
 <div class="header">
     <h1>Overview</h1>
-    <a href="/favs">Favourites</a>
-    <a href="/last">Last study</a>
-    <a href="/tagged">Search by tags</a>
+    <a href="/favs?page=1">Favourites</a>
+    <a href="/last?page=1">Last study</a>
+    <a href="/tagged?page=1&tags=">Search by tags</a>
     <a href="/tags">Tags</a>
 </div>
 <div class="tiles-container">
