renamed url /last to /latest_study

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -8,7 +8,7 @@
 <div class="header">
     <h1>Overview</h1>
     <a href="/favs?page=1">Favourites</a>
-    <a href="/last?page=1">Last study</a>
+    <a href="/latest_study?page=1">Last study</a>
     <a href="/tagged?page=1&tags=">Search by tags</a>
     <a href="/tags">Tags</a>
 </div>
