--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -54,8 +54,9 @@
         {% endfor %}
         </div>
     </div>
-    <button id="tags-submit">Submit</button>
-    <button id="tags-clear">Clear All</button>
+    <button id="tags-submit-add">Add</button>
+    <button id="tags-submit-del">Del</button>
+    <button id="tags-clear">Clear</button>
     <button id="tags-close">Close</button>
 </div>
 
@@ -131,16 +132,40 @@
         {#const params = `image-id=${idsStr}&tags=${tagsStr}`#}
         {#console.log('Selected Tags:', params);#}
 
-        document.getElementById('tags-submit').classList.add('loading')
+        document.getElementById('tags-submit-add').classList.add('loading')
 
         fetch(`/add-image-tags?image-id=${idsStr}&tags=${tagsStr}`)
             .then(response => {
                 if (!response.ok) throw new Error('Network response was not ok');
-                document.getElementById('tags-submit').classList.remove('loading')
+                document.getElementById('tags-submit-add').classList.remove('loading')
             })
             .catch(error => {
                 console.error('There was a problem with the fetch operation:', error);
-                document.getElementById('tags-submit').classList.remove('loading')
+                document.getElementById('tags-submit-add').classList.remove('loading')
+            });
+    }
+
+    function submitRemoveTags()
+    {
+        const selectedTags = Array.from(document.querySelectorAll('#tagList input[type="checkbox"]:checked'))
+            .map((checkbox) => checkbox.value);
+
+        const idsStr = selection.selectedIds.join(',')
+        const tagsStr = selectedTags.map(t => '-' + t).join(',')
+
+        {#const params = `image-id=${idsStr}&tags=${tagsStr}`#}
+        {#console.log('Selected Tags:', params);#}
+
+        document.getElementById('tags-submit-del').classList.add('loading')
+
+        fetch(`/remove-image-tags?image-id=${idsStr}&tags=${tagsStr}`)
+            .then(response => {
+                if (!response.ok) throw new Error('Network response was not ok');
+                document.getElementById('tags-submit-del').classList.remove('loading')
+            })
+            .catch(error => {
+                console.error('There was a problem with the fetch operation:', error);
+                document.getElementById('tags-submit-del').classList.remove('loading')
             });
     }
 
@@ -167,7 +192,8 @@
 
     document.getElementById('tags-show-btn').addEventListener('click', fetchTags)
     document.getElementById('tags-open-btn').addEventListener('click', toggleTagsPopupDisplay)
-    document.getElementById('tags-submit').addEventListener('click', submitAddTags)
+    document.getElementById('tags-submit-add').addEventListener('click', submitAddTags)
+    document.getElementById('tags-submit-del').addEventListener('click', submitRemoveTags)
     document.getElementById('tags-close').addEventListener('click', closeTagsPopup)
     document.querySelector('.tags-popup-background').addEventListener('click', closeTagsPopup)
     document.getElementById('tags-clear').addEventListener('click', clearTagsPopup)
