--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/static/styles_global.css">
-    <link rel="stylesheet" href="/static/styles_gallery.css">
+    <link rel="stylesheet" href="/static/styles/styles_global.css">
+    <link rel="stylesheet" href="/static/styles/styles_gallery.css">
     <script type="text/javascript" src="/static/image_lazy_load.js"></script>
     <script type="text/javascript" src="/static/mut_attr_observer.js"></script>
     <script type="text/javascript" src="/static/rating.js"></script>
