refactor: renamed styles

--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<title>Image ({{ image.image_id }})</title>
-    <link rel="stylesheet" href="/static/styles/styles_global.css">
-    <link rel="stylesheet" href="/static/styles/style_image.css">
+    <link rel="stylesheet" href="/static/styles/global.css">
+    <link rel="stylesheet" href="/static/styles/image.css">
     <script type="text/javascript" src="/static/img_params.js"></script>
     <script type="text/javascript" src="/static/rating.js"></script>
     <script type="text/javascript" src="/static/study_timer.js"></script>
