--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <title>Gallery overview</title>
-    <link rel="stylesheet" href="/static/styles/styles_overview.css">
+    <link rel="stylesheet" href="/static/styles/overview.css">
     <script type="text/javascript" src="/static/image_lazy_load.js"></script>
 </head>
 <body>
