--- a/templates/crud/tpl_tags_edit.html
+++ b/templates/crud/tpl_tags_edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/styles/styles_global.css">
+    <link rel="stylesheet" href="/static/styles/global.css">
     <title>Tag edit</title>
 </head>
 <body>
