refactor: moved js files into dedicated folder

--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -4,9 +4,9 @@
 	<title>Image ({{ image.image_id }})</title>
     <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="/static/styles/image.css">
-    <script type="text/javascript" src="/static/img_params.js"></script>
-    <script type="text/javascript" src="/static/rating.js"></script>
-    <script type="text/javascript" src="/static/study_timer.js"></script>
+    <script type="text/javascript" src="/static/js/img_params.js"></script>
+    <script type="text/javascript" src="/static/js/rating.js"></script>
+    <script type="text/javascript" src="/static/js/study_timer.js"></script>
 </head>
 <body>
     <div style="display: none" id="image-id" >{{ image.image_id }}</div>
