--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Gallery overview</title>
     <link rel="stylesheet" href="/static/styles/overview.css">
-    <script type="text/javascript" src="/static/image_lazy_load.js"></script>
+    <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
 </head>
 <body>
 <div class="header">
