--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -4,10 +4,10 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="/static/styles/gallery.css">
-    <script type="text/javascript" src="/static/image_lazy_load.js"></script>
-    <script type="text/javascript" src="/static/mut_attr_observer.js"></script>
-    <script type="text/javascript" src="/static/rating.js"></script>
-    <script type="text/javascript" src="/static/image_selection.js"></script>
+    <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
+    <script type="text/javascript" src="/static/js/mut_attr_observer.js"></script>
+    <script type="text/javascript" src="/static/js/rating.js"></script>
+    <script type="text/javascript" src="/static/js/image_selection.js"></script>
 </head>
 <body>
 <div class="header">
