fixed a typo, added global style, removed wrong title

--- a/templates/crud/tpl_tags_list.html
+++ b/templates/crud/tpl_tags_list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-    <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a><h1>{{ title }}</h1>
+    <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a>
     <h1>Tags</h1>
 </div>
 
