--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <title>Gallery overview</title>
+    <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="/static/styles/overview.css">
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
 </head>
@@ -9,7 +10,7 @@
     <h1>Overview</h1>
     <a href="/favs?page=1">Favourites</a>
     <a href="/latest_study?page=1">Last study</a>
-    <a href="/tagged?page=1&tags=">Search by tags</a>
+    <a href="/tagged?page=1&tags=&tag-set=1">Search by tags</a>
     <a href="/tags">Tags</a>
 </div>
 <div class="tiles-container">
