added tag sets and mixed them with the "singular" tags

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -12,6 +12,7 @@
     <a href="/latest_study?page=1">Last study</a>
     <a href="/tagged?page=1&tags=&tag-set=1">Search by tags</a>
     <a href="/tags">Tags</a>
+    <a href="/tag-sets">Sets</a>
 </div>
 <div class="tiles-container">
 {% for img in images %}
