--- a/static/styles/gallery.css
+++ b/static/styles/gallery.css
@@ -62,6 +62,7 @@
     background-color: #918d8d;
     border: 1px black;
     padding: 15px;
+    overflow: auto;
 }
 
 .tags-popup-background {
@@ -81,12 +82,28 @@
 }
 
 .tag-container {
-    display: flex;
+    display: grid;
+    max-width: calc(80vw);
+    min-width: calc(10vw);
+    max-height: calc(60vh);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(20px, 1fr));
+    grid-auto-flow: column;
+    grid-gap: 5px;
+    margin: 10px;
     padding-bottom: 10px;
+    padding-right: 10px;
+
+
 }
 
 .tag-panel {
     margin-bottom: 10px;
+}
+
+.tag-edit {
+    display: flex;
+    align-items: center;
 }
 
 .tag-column {
